# tinux-launcher

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
npm/scripts/: install-binary.js  postinstall.js
src/: app.rs  auth.rs  config.rs  download.rs  event.rs  fabric.rs  java.rs  launch.rs  logging.rs  main.rs  manifest.rs  meta.rs  modrinth.rs  news.rs  paths.rs  skin.rs  theme.rs  ui.rs  update.rs  version.rs  worker.rs
