[package]
name = "tinux-launcher"
version = "0.1.0"
edition = "2021"
description = "Terminal Minecraft Java launcher"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha1 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
directories = "5"
webbrowser = "1"
url = "2"
rand = "0.8"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
arboard = { version = "3", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
